[package]
name = "battery_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
teensy4-pins = "0.3.1"
cortex-m = "0.7"
embedded-alloc = "0.5.0"
log = "0.4.22"

[dependencies.embedded-hal]
version = "~0.2"
features = ["unproven"]

[dependencies.teensy4-bsp]
version = "=0.4.5"
features = [
    "rt",
    "usb-logging",
]

[dependencies.rtic]
version = "2.0.1"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
version = "1.0.0"
features = ["cortex-m-systick"]

[dependencies.teensy4-panic]
version = "0.2"
features = ["log"]

[workspace]
members = [
    "tools",
]

# overrides the release build optimization level
# this can be deleted if higher optimization is wanted
# NOTE: lower optimization yields a faster build time
[profile.release.build-override]
opt-level = 0



